# fastapi-tdd-docker

./: .gitignore  docker-compose.yml  readme.md
.github/workflows/: main.yml
project/: .dockerignore  Dockerfile  Dockerfile.prod  pyproject.toml  requirements.txt
project/app/: config.py  db.py  main.py
project/app/api/: crud.py  ping.py  summaries.py
project/app/models/: pydantic.py  tortoise.py
project/tests/: conftest.py  test_ping.py  test_summaries.py
