[tool.poetry]
name = "fastapi-tdd-docker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.18.1"
asyncpg = "^0.25.0"
tortoise-orm = "^0.19.1"
aerich = "^0.6.3"
pytest = "^7.1.2"
requests = "^2.28.0"
gunicorn = "^20.1.0"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
black = "^22.6.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]


[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
